--- a/css/styles.css
+++ b/css/styles.css
@@ -1,41 +1,193 @@
-/* Body --------------------------------------------------------------*/
-/* line 3, /Users/jbailey14/Desktop/Stories-and-Slices/scss/styles.scss */
-Body {
-  background: url(../img/bookbanner.jpg);
-  background-repeat: repeat; }
+/* Body ----------------------------------------------------------------------------------------------------------*/
+Body{
+    background: url(../img/bookbanner.jpg);
+    background-repeat:repeat;
+}
 
-/* Color Palette -----------------------------------------------------*/
-/* line 11, /Users/jbailey14/Desktop/Stories-and-Slices/scss/styles.scss */
+
+/* Color Palette -------------------------------------------------------------------------------------------------*/
+
 .color-1 {
-  background: #6a826b; }
+    background: rgba(106,130,107,1);
+}
 
-/* line 15, /Users/jbailey14/Desktop/Stories-and-Slices/scss/styles.scss */
-.color-2 {
-  background: #741441; }
+.color-2{
+    background: rgba(116,20,65,1);
+}
 
-/* line 19, /Users/jbailey14/Desktop/Stories-and-Slices/scss/styles.scss */
-.color-3 {
-  background: #5274a2; }
+.color-3{
+    background: rgba(82,116,162,1);
+}
 
-/* line 23, /Users/jbailey14/Desktop/Stories-and-Slices/scss/styles.scss */
-.color-4 {
-  background: #493628; }
+.color-4{
+    background: rgba(73,54,40,1);
+}
 
-/* line 27, /Users/jbailey14/Desktop/Stories-and-Slices/scss/styles.scss */
-.color-5 {
-  background: #a77739; }
+.color-5{
+    background: rgba(167,119,57,1);
+}
 
-/* Textures or Patterns ----------------------------------------------*/
-/* line 34, /Users/jbailey14/Desktop/Stories-and-Slices/scss/styles.scss */
-.pattern-1 {
-  background: url("../img/text1.jpeg"); }
 
-/* line 38, /Users/jbailey14/Desktop/Stories-and-Slices/scss/styles.scss */
-.pattern-2 {
-  background: url("../img/text2.jpeg"); }
+/* Textures or Patterns ------------------------------------------------------------------------------------------*/
 
-/* line 42, /Users/jbailey14/Desktop/Stories-and-Slices/scss/styles.scss */
-.pattern-3 {
-  background: url("../img/text3.jpeg"); }
+.pattern-1{
+    background: url("../img/text1.jpeg");
+}
 
-/*# sourceMappingURL=styles.css.map */
+.pattern-2{
+    background: url("../img/text2.jpeg");
+}
+
+.pattern-3{
+    background: url("../img/text3.jpeg");
+}
+
+/* Banner Styling ------------------------------------------------------------------------------------------------*/
+.banner {
+    background:
+    linear-gradient( rgba(167,119,57,.50), rgba(167,119,57,.50) ),
+    
+    url(../img/text3.jpeg);
+    
+    border: 10px solid black;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.title{
+    padding-left: 2em;
+    flex-grow: 1;
+}
+
+.logo{
+    width: 20%;
+    height: 20%;
+    border: 7px solid black;
+    position: auto;
+}
+
+// Navigation
+nav {
+    background: red;
+    width: 600px;
+    height: 30px;
+}
+
+.navlinks {
+    list-style: none;
+    display: inline;
+}
+
+
+/* Typography ----------------------------------------------------------------------------------------------------*/
+/* Quotation & Navigation = font-family: 'Simonetta', cursive; */
+
+h1 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 5em;
+    text-transform: uppercase;
+    color: rgba(116,20,65,1);
+    text-shadow: 5px 5px 5px #000;
+}
+
+h2 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: none;
+    font-size: 3em;
+    color: black;
+}
+
+h3 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: none;
+    font-size: 2em;
+    color: black;
+    text-align: center;
+    background: rgb(106,130,107);
+}
+
+h4 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: none;
+    font-size: 1.5em;
+    color: black;
+    text-align: center;
+    background: rgb(106,130,107);
+}
+
+p {
+    font-family: 'Simonetta', cursive;
+    text-transform: none;
+    font-size: 1em;
+    color: black;
+}
+
+.pr {
+    font-size: 1.2em;
+}
+
+button {
+    background: blue;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 12px;
+    padding: 8px;
+}
+
+button:hover {
+    background: gray;
+   color: white;
+}
+
+/* Post --------------------------------------------------------------*/
+
+.post {
+    background: ;
+    background-image: linear-gradient( to right, rgba(255,255,255,1), rgba(255,255,255,.25) );
+    padding: .2em 1em .5em 1em;
+    border-radius: 2em;
+    border: rgba(106,130,107,1) solid 2px;
+    max-width: 80%;
+    min-width: 50%;
+    margin: 2em auto 4em auto;
+    box-shadow: 0.3125em 0.3125em 0.625em black;
+    position: relative;
+}
+
+.post img {
+    float: left;
+    margin: 1em;
+    
+}
+
+section {
+    position: 10em;
+}
+
+
+
+*/
+/* Footer --------------------------------------------------------------------------------------------------------*/
+.copyright {
+    color: white;
+    text-align: center;
+    font-size: .8em;
+    
+    
+/* Media Queries -------------------------------------------------------------------------------------------------*/
+/* Mobile: 320px = 20em */
+@media screen and (min-width: 20em) { 
+
+}
+  /* Diagnostic Styling. Delete When Done. */
+  
+
+/* Tablet:  768px = 160em */
+@media screen and (min-width: 48em)  {
+    }
+  
+/* Desktop: 1280px = 80em */
+@media screen and (min-width: 80em) { 
+}
+/* Diagnostic Styling. Delete When Done. */
