--- a/css/styles.css
+++ b/css/styles.css
@@ -57,9 +57,11 @@ body{
     flex-wrap: wrap;
 }
 
+/*
 .title{
     flex-grow: 1;
     text-align: center;
+    font-size: 7em;
 }
 
 .logo{
@@ -68,6 +70,7 @@ body{
     border: 7px solid black;
     position: relative;
 }
+*/
 
 /*Navigation -----------------------------------------------------------------------------------------------------*/
 
@@ -97,7 +100,7 @@ body{
 
 h1 {
     font-family: 'Oswald', sans-serif;
-    font-size: 7em;
+    font-size: 4em;
     text-transform: uppercase;
     color: rgba(116,20,65,1);
     text-shadow: 5px 5px 5px #000;
@@ -159,10 +162,9 @@ button:hover {
     font-size: .75em;
 }
 
-/* Post --------------------------------------------------------------*/
+/* Post ----------------------------------------------------------------------------------------------------------*/
 
 .post {
-    background: ;
     background-image: linear-gradient( to right, rgba(255,255,255,1), rgba(255,255,255,.6) );
     padding: .2em 1em .5em 1em;
     border-radius: 2em;
@@ -185,8 +187,60 @@ section {
 }
 
 
+/* Comments -------------------------------------------------------------------------------------------------------*/
 
-*/
+#HCB_comment_box {
+    padding: .2em 1em .5em 1em;
+    border-radius: 2em;
+    border: rgba(106,130,107,1) solid 2px;
+    max-width: 90%;
+    min-width: 70%;
+    margin: 2em auto 4em auto;
+    box-shadow: 0.3125em 0.3125em 0.625em black;
+    position: relative;
+}
+
+
+/* Contact --------------------------------------------------------------------------------------------------------*/
+
+section {
+    background-image: linear-gradient( to right, rgba(255,255,255,1), rgba(255,255,255,.6) );
+    padding: .2em 1em .5em 1em;
+    border-radius: 2em;
+    border: rgba(106,130,107,1) solid 2px;
+    max-width: 90%;
+    min-width: 80%;
+    margin: 2em auto 4em auto;
+    box-shadow: 0.3125em 0.3125em 0.625em black;
+    position: relative;
+}
+
+.contact{
+  background: rgba(106,130,107,1);
+  border-radius: 15px;
+  list-style: none;
+  margin: 12px 0 12px 40px;
+  position: relative;
+  padding: 10px;
+  width: 400px;
+  color: white;
+}
+
+.con{
+  background: white;
+  border-radius: 25%;
+  position: absolute;
+  padding: 6px;
+  right: -10px;
+  bottom: -10px;
+}
+
+.icon {
+    height: 40px;
+    width: 40px;
+}
+
+
 /* Footer --------------------------------------------------------------------------------------------------------*/
 
     
@@ -195,18 +249,54 @@ section {
 /* Mobile: 320px = 20em */
 @media screen and (min-width: 20em) { 
 
-  /* Diagnostic Styling. */
+    .title {
+        text-align: center;
+        font-size: 4em;
+    }
+    
+    .logo{
+        width: 10%;
+        height: 10%;
+        border: 7px solid black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
   
-
+}
+    
 /* Tablet:  768px = 160em */
 @media screen and (min-width: 48em)  {
 
-  /* Diagnostic Styling. */
+    .title {
+        flex-grow: 1;
+        text-align: center;
+        font-size: 7em;
+    }
+    
+    .logo{
+        width: 20%;
+        height: 20%;
+        border: 7px solid black;
+        position: relative;
+    }
  
-
+}
+    
 /* Desktop: 1280px = 80em */
 @media screen and (min-width: 80em) { 
-  
-  /* Diagnostic Styling. */
-  
+
+    .title {
+        flex-grow: 1;
+        text-align: center;
+        font-size: 10em;
+    }
     
+    .logo{
+        width: 30%;
+        height: 30%;
+        border: 7px solid black;
+        position: relative;
+    }
+    
+}
